traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:19: error: not found: type y
def versDroite(x:y) {
                 ^